classDiagram
    class User {
        +Long id
        +String name
        +String role
    }
    class Product {
        +Long id
        +String name
        +Double price
    }
    class Order {
        +Long id
        +User waiter
        +List~OrderItem~ items
        +OrderStatus status
    }
    class OrderItem {
        +Long id
        +Product product
        +int quantity
    }

    Order "1" -- "*" OrderItem
    OrderItem "*" -- "1" Product
    Order "*" -- "1" User
